// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Steps/Set Step Active 1`] = `
.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5590b5;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c19 .c10 {
  color: #fff;
}

.c20 .c10 {
  color: #6e849a;
}

.c16 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c16.default {
  color: #62778c;
}

.c14 {
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c21 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px #5d9df5;
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c18 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c18::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c13 .c15 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Set Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#5590b5"
              size={16}
            >
              <svg
                data-file-name="SvgCode"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="value"
              >
                basic string
              </span>
            </span>
          </span>
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="brackets"
              >
                <span
                  className="value"
                >
                  value 1
                </span>
                <span>
                   
                </span>
                <span
                  className="or"
                >
                  <span
                    className="c14 plus"
                  >
                    <span>
                      OR
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
                <span
                  className="value"
                >
                  value 2
                </span>
              </span>
            </span>
          </span>
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="math brackets"
              >
                <span
                  className="math brackets"
                >
                  <span
                    className="math brackets"
                  >
                    <span
                      className="math brackets"
                    >
                      <span
                        className="parenthesis"
                      >
                        ( 
                      </span>
                      <span
                        className="c15 c16"
                      >
                        {user_id}
                      </span>
                       
                      <span
                        className="c14 plus"
                      >
                        <span
                          className="c10 c17"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgTimes"
                          />
                        </span>
                      </span>
                       
                      <span
                        className="value"
                      >
                        value 3
                      </span>
                      <span
                        className="parenthesis"
                      >
                         )
                      </span>
                    </span>
                     
                    <span
                      className="c14 plus"
                    >
                      <span
                        className="c10 c17"
                        color="currentColor"
                        size={16}
                      >
                        <svg
                          data-file-name="SvgSubtract"
                        />
                      </span>
                    </span>
                     
                    <span
                      className="value"
                    >
                      value 4
                    </span>
                  </span>
                   
                  <span
                    className="c14 plus"
                  >
                    <span
                      className="c10 c17"
                      color="currentColor"
                      size={16}
                    >
                      <svg
                        data-file-name="SvgAdd"
                      />
                    </span>
                  </span>
                   
                  <span
                    className="c15 c16"
                  >
                    {locale}
                  </span>
                </span>
                 
                <span
                  className="c14 plus"
                >
                  <span
                    className="c10 c17"
                    color="currentColor"
                    size={16}
                  >
                    <svg
                      data-file-name="SvgAdd"
                    />
                  </span>
                </span>
                 
                <span
                  className="math brackets"
                >
                  value 5
                </span>
              </span>
            </span>
          </span>
          <div
            className="c18"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Set Step Connected 1`] = `
.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5590b5;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c19 .c10 {
  color: #fff;
}

.c20 .c10 {
  color: #6e849a;
}

.c16 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c16.default {
  color: #62778c;
}

.c14 {
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c21 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c18 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c18::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  background: linear-gradient(to bottom,#62778c1f,#62778c3d 100%);
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c13 .c15 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Set Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#5590b5"
              size={16}
            >
              <svg
                data-file-name="SvgCode"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="value"
              >
                basic string
              </span>
            </span>
          </span>
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="brackets"
              >
                <span
                  className="value"
                >
                  value 1
                </span>
                <span>
                   
                </span>
                <span
                  className="or"
                >
                  <span
                    className="c14 plus"
                  >
                    <span>
                      OR
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
                <span
                  className="value"
                >
                  value 2
                </span>
              </span>
            </span>
          </span>
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="math brackets"
              >
                <span
                  className="math brackets"
                >
                  <span
                    className="math brackets"
                  >
                    <span
                      className="math brackets"
                    >
                      <span
                        className="parenthesis"
                      >
                        ( 
                      </span>
                      <span
                        className="c15 c16"
                      >
                        {user_id}
                      </span>
                       
                      <span
                        className="c14 plus"
                      >
                        <span
                          className="c10 c17"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgTimes"
                          />
                        </span>
                      </span>
                       
                      <span
                        className="value"
                      >
                        value 3
                      </span>
                      <span
                        className="parenthesis"
                      >
                         )
                      </span>
                    </span>
                     
                    <span
                      className="c14 plus"
                    >
                      <span
                        className="c10 c17"
                        color="currentColor"
                        size={16}
                      >
                        <svg
                          data-file-name="SvgSubtract"
                        />
                      </span>
                    </span>
                     
                    <span
                      className="value"
                    >
                      value 4
                    </span>
                  </span>
                   
                  <span
                    className="c14 plus"
                  >
                    <span
                      className="c10 c17"
                      color="currentColor"
                      size={16}
                    >
                      <svg
                        data-file-name="SvgAdd"
                      />
                    </span>
                  </span>
                   
                  <span
                    className="c15 c16"
                  >
                    {locale}
                  </span>
                </span>
                 
                <span
                  className="c14 plus"
                >
                  <span
                    className="c10 c17"
                    color="currentColor"
                    size={16}
                  >
                    <svg
                      data-file-name="SvgAdd"
                    />
                  </span>
                </span>
                 
                <span
                  className="math brackets"
                >
                  value 5
                </span>
              </span>
            </span>
          </span>
          <div
            className="c18"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Set Step Empty 1`] = `
.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5590b5;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14 .c10 {
  color: #fff;
}

.c15 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c16 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c13::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #8da2b5;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Set Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#5590b5"
              size={16}
            >
              <svg
                data-file-name="SvgCode"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Set variable to...
          </span>
          <div
            className="c13"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Set Step Multiple Expression 1`] = `
.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5590b5;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c19 .c10 {
  color: #fff;
}

.c20 .c10 {
  color: #6e849a;
}

.c16 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c16.default {
  color: #62778c;
}

.c14 {
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c21 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c18 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c18::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c13 .c15 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Set Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#5590b5"
              size={16}
            >
              <svg
                data-file-name="SvgCode"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="value"
              >
                basic string
              </span>
            </span>
          </span>
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="brackets"
              >
                <span
                  className="value"
                >
                  value 1
                </span>
                <span>
                   
                </span>
                <span
                  className="or"
                >
                  <span
                    className="c14 plus"
                  >
                    <span>
                      OR
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
                <span
                  className="value"
                >
                  value 2
                </span>
              </span>
            </span>
          </span>
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="math brackets"
              >
                <span
                  className="math brackets"
                >
                  <span
                    className="math brackets"
                  >
                    <span
                      className="math brackets"
                    >
                      <span
                        className="parenthesis"
                      >
                        ( 
                      </span>
                      <span
                        className="c15 c16"
                      >
                        {user_id}
                      </span>
                       
                      <span
                        className="c14 plus"
                      >
                        <span
                          className="c10 c17"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgTimes"
                          />
                        </span>
                      </span>
                       
                      <span
                        className="value"
                      >
                        value 3
                      </span>
                      <span
                        className="parenthesis"
                      >
                         )
                      </span>
                    </span>
                     
                    <span
                      className="c14 plus"
                    >
                      <span
                        className="c10 c17"
                        color="currentColor"
                        size={16}
                      >
                        <svg
                          data-file-name="SvgSubtract"
                        />
                      </span>
                    </span>
                     
                    <span
                      className="value"
                    >
                      value 4
                    </span>
                  </span>
                   
                  <span
                    className="c14 plus"
                  >
                    <span
                      className="c10 c17"
                      color="currentColor"
                      size={16}
                    >
                      <svg
                        data-file-name="SvgAdd"
                      />
                    </span>
                  </span>
                   
                  <span
                    className="c15 c16"
                  >
                    {locale}
                  </span>
                </span>
                 
                <span
                  className="c14 plus"
                >
                  <span
                    className="c10 c17"
                    color="currentColor"
                    size={16}
                  >
                    <svg
                      data-file-name="SvgAdd"
                    />
                  </span>
                </span>
                 
                <span
                  className="math brackets"
                >
                  value 5
                </span>
              </span>
            </span>
          </span>
          <div
            className="c18"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Set Step Single Expression 1`] = `
.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5590b5;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c18 .c10 {
  color: #fff;
}

.c19 .c10 {
  color: #6e849a;
}

.c15 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c15.default {
  color: #62778c;
}

.c16 {
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c20 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c17 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c17::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c13 .c14 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Set Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#5590b5"
              size={16}
            >
              <svg
                data-file-name="SvgCode"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="brackets"
              >
                <span
                  className="c14 c15"
                >
                  {user_id}
                </span>
                <span>
                   
                </span>
                <span
                  className="or"
                >
                  <span
                    className="c16 plus"
                  >
                    <span>
                      OR
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
                <span
                  className="value"
                >
                  single set
                </span>
              </span>
            </span>
          </span>
          <div
            className="c17"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Set Step Without Port 1`] = `
.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5590b5;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c18 .c10 {
  color: #fff;
}

.c19 .c10 {
  color: #6e849a;
}

.c16 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c16.default {
  color: #62778c;
}

.c14 {
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c20 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c13 .c15 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Set Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#5590b5"
              size={16}
            >
              <svg
                data-file-name="SvgCode"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="value"
              >
                basic string
              </span>
            </span>
          </span>
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="brackets"
              >
                <span
                  className="value"
                >
                  value 1
                </span>
                <span>
                   
                </span>
                <span
                  className="or"
                >
                  <span
                    className="c14 plus"
                  >
                    <span>
                      OR
                    </span>
                  </span>
                </span>
                <span>
                   
                </span>
                <span
                  className="value"
                >
                  value 2
                </span>
              </span>
            </span>
          </span>
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            <span
              className="c13 expressionfy"
            >
              <span
                className="math brackets"
              >
                <span
                  className="math brackets"
                >
                  <span
                    className="math brackets"
                  >
                    <span
                      className="math brackets"
                    >
                      <span
                        className="parenthesis"
                      >
                        ( 
                      </span>
                      <span
                        className="c15 c16"
                      >
                        {user_id}
                      </span>
                       
                      <span
                        className="c14 plus"
                      >
                        <span
                          className="c10 c17"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgTimes"
                          />
                        </span>
                      </span>
                       
                      <span
                        className="value"
                      >
                        value 3
                      </span>
                      <span
                        className="parenthesis"
                      >
                         )
                      </span>
                    </span>
                     
                    <span
                      className="c14 plus"
                    >
                      <span
                        className="c10 c17"
                        color="currentColor"
                        size={16}
                      >
                        <svg
                          data-file-name="SvgSubtract"
                        />
                      </span>
                    </span>
                     
                    <span
                      className="value"
                    >
                      value 4
                    </span>
                  </span>
                   
                  <span
                    className="c14 plus"
                  >
                    <span
                      className="c10 c17"
                      color="currentColor"
                      size={16}
                    >
                      <svg
                        data-file-name="SvgAdd"
                      />
                    </span>
                  </span>
                   
                  <span
                    className="c15 c16"
                  >
                    {locale}
                  </span>
                </span>
                 
                <span
                  className="c14 plus"
                >
                  <span
                    className="c10 c17"
                    color="currentColor"
                    size={16}
                  >
                    <svg
                      data-file-name="SvgAdd"
                    />
                  </span>
                </span>
                 
                <span
                  className="math brackets"
                >
                  value 5
                </span>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;
